Fix import.html alignment

--- a/css/import.css
+++ b/css/import.css
@@ -29,10 +29,10 @@
 .import_tab label {
     width: 250px;
     height: 50px;
-    line-height: 50px;
     font-size: 18px;
     text-align: center;
-    display: inline-block;
+    display: inline-grid;
+    align-items: center;
     margin: 20px;
     cursor: pointer;
     border-radius: 2px;
@@ -53,15 +53,15 @@
 
 button,
 .import_file label {
-    display: inline-block;
+    display: inline-grid;
     width: 260px;
     height: 60px;
-    line-height: 60px;
     border: #CCC 1px solid;
     background: white;
     border-radius: 2px;
     position: relative;
     text-align: center;
+    align-items: center;
     font-size: 16px;
     color: gray;
     cursor: pointer;
